# src/vmm/src/resources.rs
@@ -290,10 +290,15 @@ impl VmResources {
             .collect();
 
         if !net_devs_with_mmds.is_empty() {
+            let (version, imds_compat) = {
+                let mmds_guard = mmds.lock().expect("Poisoned lock");
+                (mmds_guard.version(), mmds_guard.imds_compat())
+            };
             let mut inner_mmds_config = MmdsConfig {
-                version: mmds.lock().expect("Poisoned lock").version(),
+                version,
                 network_interfaces: vec![],
                 ipv4_address: None,
+                imds_compat,
             };
 
             for net_dev in net_devs_with_mmds {
@@ -383,7 +388,7 @@ impl VmResources {
         instance_id: &str,
     ) -> Result<(), MmdsConfigError> {
         self.set_mmds_network_stack_config(&config)?;
-        self.set_mmds_basic_config(config.version, instance_id)?;
+        self.set_mmds_basic_config(config.version, config.imds_compat, instance_id)?;
 
         Ok(())
     }
@@ -392,10 +397,12 @@ impl VmResources {
     pub fn set_mmds_basic_config(
         &mut self,
         version: MmdsVersion,
+        imds_compat: bool,
         instance_id: &str,
     ) -> Result<(), MmdsConfigError> {
         let mut mmds_guard = self.locked_mmds_or_default()?;
         mmds_guard.set_version(version);
+        mmds_guard.set_imds_compat(imds_compat);
         mmds_guard.set_aad(instance_id);
 
         Ok(())
